@@ -165,7 +165,7 @@
 
 <div id="cloned_element_attributes_issue" foo="original"></div>
 <a id="attributes_with_issues_1" href="test.html" accesskey="L" tabindex="50" title="a link" onclick="alert('hello world');"></a>
-<a id="attributes_with_issues_2" href="" accesskey="" tabindex="" title=""></a>
+<a id="attributes_with_issues_2" href="" accesskey="" title=""></a>
 <a id="attributes_with_issues_3"></a>
 <iframe id="attributes_with_issues_iframe" src=""></iframe>
 <form id="attributes_with_issues_form" method="post" action="blah" class="blah-class">
