@@ -1,3 +1,5 @@
+* Add table of default attribute values so fuse.Element#getAttribute may constently resolve them across browsers. [fabiomcosta, jddalton] 
+
 * Add ability to exit early from fuse.Object.each() by returning false from the callback and allow setting the `this` of the callback. [jddalton]
 
 * Make fuse.Object.getClassOf() more closely follow the spirit of the specification and throw a TypeError when passed an undefined or null value. [jddalton, kangax]
